# multisolution-active-grasping

./: .gitignore  CMakeLists.txt  README.md  compute_multi_solutions.py  del_install.sh  evaluate_cec2013.py  evaluation.py  exec_evaluate.sh  exec_opt.sh  execution.sh  info_objf.py  install_libs.sh  join_bests.py  main_active_grasping.py  requirements.txt  res_cec13_gp.txt  res_grasp_gp.txt  test_syntethic_funcs.txt  test_syntethic_funcs_6.txt
Grasp/: CMakeLists.txt
Grasp/include/Grasp/: BaseGraspExecutor.hpp  CoordSys.hpp  EigenGraspPlanner.hpp  Grasp.hpp  GraspExecutor.hpp  GraspPlanner.hpp  GraspPlannerIK.hpp  GraspPlannerIKParams.hpp  GraspPlannerParams.hpp  GraspPlannerS.hpp  GraspResult.hpp  GraspVars.hpp  Parameters.hpp  TestGramacyExecutor.hpp  Utils.hpp
Grasp/python/: CMakeLists.txt  eigen.i  numpy.i  pygrasp.i
Grasp/src/: BaseGraspExecutor.cpp  EigenGraspPlanner.cpp  GraspPlanner.cpp  GraspPlannerIK.cpp  GraspPlannerIKParams.cpp  GraspPlannerParams.cpp  GraspPlannerS.cpp  TestGramacyExecutor.cpp  Utils.cpp
Grasp/utils/: CMakeLists.txt  EigenGraspPlanner.ui  EigenGraspPlannerWindow.cpp  EigenGraspPlannerWindow.h  GraspPlanner.ui  GraspPlannerIK.ui  GraspPlannerIKWindow.cpp  GraspPlannerIKWindow.h  GraspPlannerS.ui  GraspPlannerWindow.cpp  GraspPlannerWindow.h  GraspPlannerWindowS.cpp  GraspPlannerWindowS.h  GraspPlannerWindowSpherical.cpp  grasp_ik_visualization.cpp  grasp_visualization.cpp  grasp_visualizationS.cpp  utils.hpp
OptSystem/: CMakeLists.txt
OptSystem/cec2013/: functionCEC2013.py
OptSystem/core/: datalog.py  metric.py  optimizer_executor.py
OptSystem/executors/: bayesopt_executor.py  gpyopt_executor.py  robot_executor.py  sigopt_executor.py
OptSystem/executors/robot_lib/: run.txt
OptSystem/executors/robot_lib/robot/: latent_space_objective.py  lol_robot.py  objective.py  robot.py  trust_region.py
OptSystem/executors/robot_lib/robot/tasks/: test.py
OptSystem/executors/robot_lib/scripts/: continuous_space_optimization.py  optimize.py
OptSystem/grasp/: grasp_metrics.py  grasp_models.py
OptSystem/include/ActiveGraspingOpt/: ActiveGraspingOpt.hpp  ActiveGraspingOptParams.hpp
OptSystem/python/: CMakeLists.txt
OptSystem/python/cec2013/: functionCEC2013.py  generate_config.py
OptSystem/python/cec2013/cec2013/: CF1.py  CF2.py  CF3.py  CF4.py  cec2013.py
OptSystem/python/core/: datalog.py  metric.py  objective_function.py  optimizer_executor.py
OptSystem/python/executors/: bayesopt_executor.py  gpyopt_executor.py  sigopt_executor.py
OptSystem/python/grasp/: grasp_metrics.py  grasp_models.py
OptSystem/python/syntethic_functions/: forrester.py  function1d.py  function2d.py
OptSystem/python/synthetic_functions/: function1d.py  function2d.py  functionNd.py
OptSystem/python/utils/: utils.py
OptSystem/src/: ActiveGraspingOpt.cpp
OptSystem/synthetic_functions/: function1d.py  function2d.py  functionNd.py
OptSystem/utils/: utils.py
config/bayesopt/: bopt_params.json  bopt_params_default.json  bopt_params_simple.json
config/cec2013/: F10_params.json  F13_params.json  F14_params.json  F16_params.json  F18_params.json  F1_params.json  F20_params.json  F2_params.json  F4_params.json  F5_params.json  F6_params.json  F7_params.json  F8_params.json  F9_params.json  bbo_lp_lcb_fod_params.json  bbo_lp_lcb_params.json  bbo_lp_params.json  bbo_mcmc_2500_ei2_params.json  bbo_mcmc_2500_ei_params.json  bbo_mcmc_250_ei2_params.json  bbo_mcmc_250_ei_lcb_4_params.json  bbo_mcmc_250_ei_lcb_gp_params.json  bbo_mcmc_250_ei_params.json  bbo_mcmc_250_lcb_params.json  bo_params.json  e_mebo_gp_params.json  e_mebo_params.json  gpyopt_lp_params.json  mebo_gp_params.json  mebo_no_divf_gp_params.json  mebo_no_divf_params.json  mebo_params.json
config/cec2013/cl_mebo/: F10_params.json  F1_params.json  F2_params.json  F3_params.json  F4_params.json  F7_params.json
config/cec2013/cluster_mcmc/: F10_params.json  F1_params.json  F2_params.json  F3_params.json  F4_params.json  F7_params.json
config/cec2013/cluster_mcmc_v2/: F10_params.json  F1_params.json  F2_params.json  F3_params.json  F4_params.json  F7_params.json
config/cec2013/robot/: F10_params.json  F1_params.json  F2_params.json  F3_params.json  F4_params.json  F7_params.json
config/cec2013/sigopt_ms/: F10_params.json  F1_params.json  F2_params.json  F3_params.json  F4_params.json  F7_params.json
config/grasp/objs/: drill.xml  falcon.xml  glass.xml  trophySTL.xml
config/grasp/params/: grasp_params.json  grasp_params_animal_statue.json  grasp_params_dino.json  grasp_params_trophy.json  grasp_visualization.json  icub_robot_visualization.json  obj_dino.json  obj_rice_physics.json  obj_trophy.json
config/grasp/tests/: grasp_params.json  icub_robot.json  sopt_params.json
config/graspIK/params/: grasp_params.json  grasp_params_bottle.json
config/graspIK/tests/: bopt_params.json  sopt_params.json
config/scenes/: graspIK.xml  graspIK_custom.xml  graspIK_dino.xml  graspIK_watering.xml  graspIK_wok.xml  table.wrl
config/sigopt/: grasp.json
config/synthetic_functions/: bbo_lp_1d_params.json  bbo_lp_2d_params.json  bbo_lp_lcb_fod_params.json  bbo_lp_lcb_params.json  bbo_lp_lcba_fod_params.json  bbo_lp_lcba_params.json  bbo_mcmc_2500_params.json  bbo_mcmc_250_params.json  bo_params.json  gpyopt_bo_params.json  gpyopt_lp_params.json
config/synthetic_functions/beale/: exp_params.json  gpyopt_params.json
config/synthetic_functions/branin/: exp_params.json  gpyopt_params.json
config/synthetic_functions/eggholder/: exp_params.json  gpyopt_params.json
config/synthetic_functions/forrester/: gpyopt_params.json  sigopt_params.json
config/synthetic_functions/goldstein/: exp_params.json  gpyopt_params.json
config/synthetic_functions/gramacy1d/: exp_params.json  gpyopt_params.json
config/tests/GP/: bottle.xml  (+3 more)
logs/: test.json  test2.json  test3.json  test4.json  test5.json  test_bbo.json
others/: compute_multi_solutions.py  info_objf.py  kmeans.py  test.py
test/: CMakeLists.txt  bbo_lp.cpp  bbo_lp.py  test_bbo.cpp  test_bopt.py  test_grasp.py  test_libs.cpp  test_sigopt.py
(+524 files in other folders)
